<resources>
    <string name="app_name">Pokémon Pal Park</string>
    <string name="title_text">Pokémon Pal Park</string>
    <string name="name_text">Kevin Chen, Joshua Li</string>
    <string name="playBtn">PLAY</string>
    <string name="optionsBtn">OPTIONS</string>
    <string name="helpBtn">HELP</string>
    <string name="optionTitle">Options</string>
    <string name="board_size">Field Size</string>
    <string name="num_mines"># Pokemon</string>
    <string name="helpTitle">Help</string>
    <string name="helpText"><a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">Assignment description (CMPT 276 Homepage)</a>
        \n\nHello there! Welcome to the world of Pokémon! My name is Oak, people call me the Pokémon Prof!
        This world is inhabited by creatures called Pokémon! For some people, Pokémon are pets.
        Others use them for fights. Myself, I study Pokémon as a profession. And I need your help to
        find new species of Pokémon!
        \nTo start searching for Pokémon, press "PLAY" on the main menu.
        This will take you to a field of tall grass. Press on a tile of tall grass to inspect it.
        You\'ll know a Pokémon when you see it pop up and hear its cry! If the tall grass has no Pokémon,
        a scan will show how many there are in that same row and column. Use this tool to boost your
        Pokémon catching skills! In the top left you\'ll see how many Pokémon you\'ve caught and how
        many there are. You\'ll only win once you\'ve caught em all!
        You can change the field size and number of Pokémon in the options menu.
        You can also clear all data from there. Good luck, trainer!
        \n\nResources
        \n<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=835140343">Landscape background</a>
        \n<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1088622658"> Sea background</a>
        \n<a href="https://bulbapedia.bulbagarden.net/wiki/Professor_Oak">Oak portrait</a>
        \n<a href="https://www.deviantart.com/skatefilter5/art/Pokemon-Ground-600573792">Ground tiles</a>
        \n<a href="https://www.deviantart.com/rayquaza-dot/art/Pokemon-Platinum-Grass-Autotile-293299604">Grass sprites</a>
        \n<a href="https://msikma.github.io/pokesprite/overview/inventory.html">App icon sprite</a>
        \n<a href="https://pokemondb.net/sprites">Pokémon sprites</a>
        \n<a href="https://play.pokemonshowdown.com/audio/cries/">Pokémon cries</a>
        \n<a href="https://downloads.khinsider.com/game-soundtracks/album/pokemon-sfx-gen-5-attack-moves-blk-wht-blk2-wht2">Grass and win sounds</a>
        \n<a href="https://fontmeme.com/fonts/pokemon-classic-font/">Font</a>
        \n<a href="https://fontmeme.com/pokemon-font/">Title generator</a>
        \n<a href="https://burubado.com/products/pokeball-sticker">Welcome screen Pokéball</a>
    </string>
    <string name="start_btn">START</string>
    <string name="gamesPlayedText">TextView</string>
    <string name="boardConfigText">TextView</string>
    <string name="mineNumText">TextView</string>
    <string name="highScoreText">TextView</string>
    <string name="resetBtn">RESET DATA</string>
    <string name="winMessage">You catched \nem\' all!</string>
    <string name="win_dialog_description">A cool guy wearing sunglassse</string>
    <string name="bestScoreView">No best score for this configuration!</string>
    <string name="welcometurtwig">welcomeTurtwig</string>
    <string name="welcomehorsea">welcomeHorsea</string>
    <string name="welcomepokeball">welcomePokeball</string>
    <string name="welcomeTitle">welcomeTitle</string>

</resources>