<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skybackground"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/author_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/name_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="16sp"
        android:fontFamily="@font/pokefont"
        app:layout_constraintBottom_toTopOf="@+id/welcomePokeball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/welcome_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/play_white"
        android:fontFamily="@font/pokefont"
        android:text="@string/start_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomePokeball" />

    <ImageView
        android:id="@+id/welcomePokeball"
        android:layout_width="196dp"
        android:layout_height="169dp"
        android:contentDescription="@string/welcomepokeball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        app:srcCompat="@drawable/pokeball" />

    <ImageView
        android:id="@+id/welcomeHorsea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/welcomehorsea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/welcomePokeball"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/horsea" />

    <ImageView
        android:id="@+id/welcomeTurtwig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/welcometurtwig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/welcomePokeball"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/turtwig" />

    <ImageView
        android:id="@+id/welcomeTitle"
        android:layout_width="495dp"
        android:layout_height="69dp"
        android:contentDescription="@string/welcomeTitle"
        app:layout_constraintBottom_toTopOf="@+id/welcomePokeball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_title" />

</androidx.constraintlayout.widget.ConstraintLayout>